[project]
name = "base"
version = "0.1.0"
description = "A base set of python packages for quick env setup."
requires-python = ">=3.13"
dependencies = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "plotly>=6.5.0",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]
